--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.main-container, .root-container{
+  height: 100%;
+  .mat-sidenav{
+    width: 384px;
+  }
+}
