--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .mat-sidenav{
     width: 384px;
   }
+  .mat-sidenav-container {
+    height: 100%;
+  }
 }
