--- a/src/app/controller-home/controller-home.component.html
+++ b/src/app/controller-home/controller-home.component.html
@@ -1,3 +1,21 @@
+<!-- <mat-toolbar>
+  <button mat-flat-button color="" (click)="goBackToControllerList()">
+    <mat-icon>arrow_back_ios</mat-icon>
+    <span>Back</span>
+  </button>
+  <div>Controller</div>
+</mat-toolbar> -->
+
+
+<!-- <mat-toolbar color="primary" class="example-toolbar">
+  <button mat-flat-button color="" (click)="goBackToControllerList()">
+    <mat-icon>arrow_back_ios</mat-icon>
+    <span>Back</span>
+  </button>
+  <h1 class="example-app-name">Controller Home</h1>
+</mat-toolbar>
+
+
 <mat-sidenav-container class="root-container">
   <mat-sidenav mode="side" opened>
     <ul>
@@ -12,4 +30,38 @@
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
+
+
+
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="example-app-name">Controller Home</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="example-sidenav-container"
+                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+      <button mat-flat-button color="" (click)="goBackToControllerList()">
+        <mat-icon>arrow_back_ios</mat-icon>
+        <span>Back</span>
+      </button>
+      <mat-nav-list>
+        <ul>
+          <li><a routerLink="./">Dashboard</a></li>
+          <li><a routerLink="scheduling">Scheduling</a></li>
+          <li><a routerLink="stations">Stations</a></li>
+          <li><a routerLink="">Adjustments</a></li>
+          <li><a routerLink="">Remote Control</a></li>
+          <li><a routerLink="">Settings</a></li>
+        </ul>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
