--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 </mat-toolbar>
 <div class="root-container" [class.example-is-mobile]="mobileQuery.matches">
 
-  <mat-sidenav-container class="example-sidenav-container"
+  <mat-sidenav-container class="main-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="'over'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" (click)="snav.toggle()">
