--- a/src/app/controller-home/controller-home.component.html
+++ b/src/app/controller-home/controller-home.component.html
@@ -36,15 +36,14 @@
 
 <div class="main-container" [class.example-is-mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="example-toolbar">
-    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <button *ngIf="mobileQuery.matches" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">Controller Home</h1>
   </mat-toolbar>
 
-  <mat-sidenav-container class="main-container"
-                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+  <mat-sidenav-container class="main-container">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
     [opened]="!mobileQuery.matches"
-    (click)="snav.toggle()"
+    (click)="mobileQuery.matches ? snav.toggle() : null"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <button mat-flat-button color="" (click)="goBackToControllerList()">
         <mat-icon>arrow_back_ios</mat-icon>
