add mat-list-item attribute for proper rendering

--- a/src/app/controller-home/controller-home.component.html
+++ b/src/app/controller-home/controller-home.component.html
@@ -19,12 +19,12 @@
 <mat-sidenav-container class="root-container">
   <mat-sidenav mode="side" opened>
     <ul>
-      <li><a routerLink="./">Dashboard</a></li>
-      <li><a routerLink="scheduling">Scheduling</a></li>
-      <li><a routerLink="stations">Stations</a></li>
-      <li><a routerLink="">Adjustments</a></li>
-      <li><a routerLink="">Remote Control</a></li>
-      <li><a routerLink="">Settings</a></li>
+      <a routerLink="./">Dashboard</a>
+      <a routerLink="scheduling">Scheduling</a>
+      <a routerLink="stations">Stations</a>
+      <a routerLink="">Adjustments</a>
+      <a routerLink="">Remote Control</a>
+      <a routerLink="">Settings</a>
     </ul>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -50,14 +50,13 @@
         <span>Back</span>
       </button>
       <mat-nav-list>
-        <ul>
-          <li><a routerLink="./">Dashboard</a></li>
-          <li><a routerLink="scheduling">Scheduling</a></li>
-          <li><a routerLink="stations">Stations</a></li>
-          <li><a routerLink="">Adjustments</a></li>
-          <li><a routerLink="">Remote Control</a></li>
-          <li><a routerLink="">Settings</a></li>
-        </ul>
+        <a mat-list-item routerLink="./">Dashboard</a>
+          <a mat-list-item routerLink="scheduling">Scheduling</a>
+          <a mat-list-item routerLink="stations">Stations</a>
+          <a mat-list-item routerLink="">Adjustments</a>
+          <a mat-list-item routerLink="">Remote Control</a>
+          <a mat-list-item routerLink="">Settings</a>
+
       </mat-nav-list>
     </mat-sidenav>
 
