--- a/src/app/controller-list/controller-list.component.html
+++ b/src/app/controller-list/controller-list.component.html
@@ -1,12 +1,10 @@
 <mat-sidenav-container class="main-container">
   <mat-sidenav mode="side" opened>
-    <ul>
-      <li><a routerLink="controller">Rec Center ACC2</a></li>
-      <li><a routerLink="controller">My ACC2</a></li>
-      <li><a routerLink="controller">My ICC2 cellular</a></li>
-
-
-    </ul>
+    <mat-nav-list>
+      <a mat-list-item routerLink="controller">Rec Center ACC2</a>
+      <a mat-list-item routerLink="controller">My ACC2</a>
+      <a mat-list-item routerLink="controller">My ICC2 cellular</a>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <h2>Map area</h2>
